# V1_decoder

./: .gitignore  README.md  pyproject.toml  tests.py
docs/: development.md  roadmap.md
image_compression/: my_picture.latents.pt
image_compression/tests/develop_files/: img_downs.npy  npy_vae.py
legacy/: README.md  orig_vae.py
legacy/develop_files/: image_vae.py
scripts/: generate_synthetic_neural_dataset.py  run_image_vae_batch.py  run_image_vae_single.py  run_neural_ae_experiment.py
scripts/configs/: image_vae_batch.toml  image_vae_single.toml  neural_ae_experiment.toml  synthetic_neural_dataset.toml
src/synthetic_data/sc/: plot.py  post.py
src/v1tovideo/: __init__.py  config_utils.py
src/v1tovideo/image_autoencoder/: __init__.py  config_parser.py  metrics.py  sd3_vae.py
src/v1tovideo/latent_mapper/: __init__.py
src/v1tovideo/neural_autoencoder/: __init__.py  config_parser.py  data.py  synthetic.py  trainer.py  trainer_sc.py
src/v1tovideo/neural_autoencoder/models/: PAE.py  PAE_v0.py  TAE.py  TAE_v0.py  TAE_v1.py  TAE_v2.py  __init__.py  core.py
